--- a/card.html
+++ b/card.html
@@ -2,26 +2,27 @@
 <html>
 <head>
 	<meta charset="utf-8">
+	<link rel="stylesheet" href="styles.css">
 	<title>Animal Trading Cards</title>
 </head>
 <body>
-	<div>
+	<div class="animalData">
 		<!-- your favorite animal's name goes here -->
-		<h3>Animal's name</h3>
+		<h3 id="name">Mr. Teacup</h3>
 		<!-- your favorite animal's image goes here -->
-		<img src="placeholder.png" alt="name-of-your-animal">
+		<img src="teacupPig.png" class="teacupPig" alt="mr-teacup">
 		<div>
 			<!-- your favorite animal's interesting fact goes here -->
-			<p>Write an interesting fact about your favorite animal...</p>
+			<p class="animalFact">The Teacup Pig is so adorable that it makes anyone who looks upon it cry!</p>
 			<ul>
 				<!-- your favorite animal's list items go here -->
-				<li><span>Label</span>: Item #1</li>
-				<li><span>Label</span>: Item #2</li>
-				<li><span>Label</span>: Item #3</li>
-				<li><span>Label</span>: Item #4</li>
+				<li><span>Size</span>: Tiny</li>
+				<li><span>Appearance</span>: Adorable</li>
+				<li><span>Diet</span>: Ice Cream</li>
+				<li><span>Sounds</span>: Tiny Oinks</li>
 			</ul>
 			<!-- your favorite animal's description goes here -->
-			<p>Write a brief description about your favorite animal...</p>
+			<p class="animalDesc">This little guy is adorbs! LOOK AT HIM!!!!!</p>
 		</div>
 	</div>
 </body>
