--- a/card.html
+++ b/card.html
@@ -8,18 +8,18 @@
 <body>
 	<div class="animalData">
 		<!-- your favorite animal's name goes here -->
-		<h3 id="name">Mr. Teacup</h3>
+		<h3 id="name">Benji</h3>
 		<!-- your favorite animal's image goes here -->
-		<img src="teacupPig.png" class="teacupPig" alt="mr-teacup">
+		<img src="littlebird.jpg" class="littlebird" alt="benji">
 		<div>
 			<!-- your favorite animal's interesting fact goes here -->
-			<p class="animalFact">The Teacup Pig is so adorable that it makes anyone who looks upon it cry!</p>
+			<p class="animalFact">The Love Bird is so adorable that it makes anyone who looks upon it cry!</p>
 			<ul>
 				<!-- your favorite animal's list items go here -->
 				<li><span>Size</span>: Tiny</li>
 				<li><span>Appearance</span>: Adorable</li>
 				<li><span>Diet</span>: Ice Cream</li>
-				<li><span>Sounds</span>: Tiny Oinks</li>
+				<li><span>Sounds</span>: Tiny Chirps</li>
 			</ul>
 			<!-- your favorite animal's description goes here -->
 			<p class="animalDesc">This little guy is adorbs! LOOK AT HIM!!!!!</p>
